feature(random-point): adding basic doc, need to pass body in swagger
